
	- new enums.pl, some changes: SELECTION_* becomes * again.
        - compatibility fix for 5.005_58, also fixed a bug in Gimp::Pod.
        - removed register_magic_load_handler from Lib.xs (is in PDB).
        - preliminary <Load> and <Save> support (arguments are automatically
          supplied).
        - enabled limited pixel access functions even when PDL was not found.
        - added examples/miff (a save filter for miff images).
        - close DATA in Gimp unconditionally, saves one open filehandle.

1.0981 Wed Jul 28 00:09:50 CEST 1999
	- improved gouge ;) In a sense, it's actually pretty code now!
	- region functions (except data) wrongly returned transposed matrices.
          Now the order of dimensions is bpp <- width <- height.
        - implemented and added examples/gouge.
        - fixed warnings in case no pod documentation is found.
        - added examples/logulator.
        - Carp is no longer loaded unless necessary. Reduces memory footprint.

1.098 Wed Jul 21 20:57:12 CEST 1999
	- do not try to compile gimp_personal_rc_file without gimp-1.1.
        - fixed old prefix detection.
        - get rid of "glib-config" dependency and use AM_PATH_GLIB instead.
        - do not install examples/magick until it is repeaired.

1.097 Wed Jul 14 22:55:24 CEST 1999
	- updated perlotine.
        - updated pixelmap with stub documentation.
        - redim_pdl calls affine_new directly rather than via the
          perl interpreter -> smaller Perl-Server, faster operation.
        - try to uninstall. Of course this doesn't work here, so just
          trust it will work elsewhere.
        - improved yinyang for the perl calendar ;)
        - added perl_fu_ as prefix for Image, Drawables and Channels.
        - fixed Load/Save of PF_TEXT.

1.096 Thu Jul  8 21:36:36 CEST 1999
	- fix around PDL-2.002 exporting its own ppport.h.
        - new scripts examples/frame_reshuffle and examples/frame_filter.
        - added Gimp::Fu::PF_TEXT.