@@ -6,50 +6,54 @@ use Gimp::Fu;
 use Gimp::Util;
 use PDL;
 
+use constant PI => 4 * atan2 1,1;
+
 register "pixelmap",
          "Maps Pixel values and coordinates through general Perl expressions",
          "=pod(DESCRIPTION)",
          "Marc Lehmann",
          "Marc Lehmann <pcg\@goof.com>",
-         "19990528",
+         "19990729",
          "<Image>/Filters/Map/Pixelmap",
          "*",	
          [
-           [PF_TEXT,		"expression"	, "The perl expression to use",	'$p=outer($x,$y)->slice("*$bpp")']
+           [PF_TEXT,		"expression"	, "The perl expression to use",	"outer(\$x*0.1,\$y*0.2)\n->slice(\"*\$bpp\")"]
          ],
          sub {					# es folgt das eigentliche Skript...
-   my($image,$drawable,$expr)=@_;
+   my($image,$drawable,$_expr)=@_;
 
    Gimp->progress_init ("Mapping pixels...");
    
    my $init="";
 
-   $expr =~ /\$p/   and $init.='$p = $src->data;';
-   $expr =~ /\$x/   and $init.='$x = sequence(byte,$src->w); $x+=$src->x;';
-   $expr =~ /\$y/   and $init.='$y = sequence(byte,$src->h); $y+=$src->y;';
-   $expr =~ /\$bpp/ and $init.='$bpp = $src->bpp;';
+   $_expr =~ /\$p/   and $init.='$p = $src->data;';
+   $_expr =~ /\$x/   and $init.='$x = sequence(long,$w); $x+=$_dst->x;';
+   $_expr =~ /\$y/   and $init.='$y = sequence(long,$h); $y+=$_dst->y;';
+   $_expr =~ /\$bpp/ and $init.='$bpp = $_dst->bpp;';
 
-   $expr = "sub{$init\n#line 1\n$expr;\n\$p}";
+   my($p,$x,$y,$bpp,$w,$h);
 
-   my @bounds = $drawable->mask;
+   $_expr = "sub{$init\n#line 1\n$_expr\n;}";
+
+   my @_bounds = $drawable->mask;
    {
       # $src and $dst must either be scoped or explicitly undef'ed
       # before merge_shadow.
-      my $src = new PixelRgn ($drawable->get,@bounds,0,0);
-      my $dst = new PixelRgn ($drawable->get,@bounds,1,1);
-      my($p,$x,$y,$bpp);
+      my $src  = new PixelRgn $drawable,@_bounds,0,0;
+      my $_dst = new PixelRgn $drawable,@_bounds,1,1;
 
-      $expr = eval $expr; die "$@" if $@;
+      $_expr = eval $_expr; die "$@" if $@;
 
-      $iter = Gimp->pixel_rgns_register ($src, $dst);
+      $_iter = Gimp->pixel_rgns_register ($src, $_dst);
+      my $_area = 0;
 
       do {
-         $dst->data(&$expr);
-
-         Gimp->progress_update (($src->y-$bounds[1])/$bounds[2]);
-      } while (Gimp->pixel_rgns_process ($iter));
+         ($w,$h)=($src->w,$src->h);
+         $_area += $w*$h/($_bounds[2]*$_bounds[3]);
+         $_dst->data(&$_expr);
+         Gimp->progress_update ($_area);
+      } while (Gimp->pixel_rgns_process ($_iter));
    }
-   Gimp->progress_update (1);
 
    $drawable->merge_shadow (1);
    $drawable->update ($drawable->mask);
